# JibunSenyou-Aegisub

./: README.md  Readme-MM.md  meson.build  meson_options.txt  playback_speed.patch
.github/workflows/: ci.yml
automation/: meson.build
automation/autoload/: kara-templater.lua
automation/include/: kCompatibility.lua
libaegisub/common/: option.cpp
src/: actor_MRU.cpp  actor_MRU.h  ass_karaoke.cpp  ass_karaoke.h  audio_controller.cpp  audio_controller.h  audio_display.cpp  audio_karaoke.cpp  audio_provider_ffmpegsource.cpp  audio_renderer.cpp  dialog_colorpicker_shin.cpp  dialog_style_editor.cpp  dialog_style_manager.cpp  dialogs.h  frame_main.cpp  frame_main.h  initial_line_state.cpp  initial_line_state.h  main.cpp  matroska_audio_metadata.cpp  matroska_audio_metadata.h  meson.build  preferences.cpp  preferences.h  preferences_base.cpp  preferences_base.h  project.cpp  project.h  subs_controller.cpp  subs_edit_box.cpp  subs_edit_box.h  subs_edit_ctrl.cpp  subs_edit_ctrl.h  subtitles_provider_libass.cpp  theme_preset.cpp  theme_preset.h  toast_popup.cpp  toast_popup.h  utils.h  vcva_tag_gui.cpp  (+17 more)
src/bitmaps/: manifest.respack
src/command/: edit.cpp  join_adjacent.cpp  subtitle.cpp  video.cpp
src/libresrc/: default_config.json  default_hotkey.json  default_menu.json  libresrc.cpp  libresrc.h
src/themes/: aegisub_default.json  ayu_dark.json  ayu_light.json  ayu_mirage.json  (+11 more)
subprojects/: libass.wrap  wxWidgets-master.wrap
subprojects/packagefiles/soundtouch/: meson.build
tests/: meson.build
tools/: respack.py  version.ps1  win-installer-setup.ps1
(+13 files in other folders)
